# CLimbot_5D_C-_Code

./: CMakeLists.txt  README.md  globalpath.cpp  globalpath.h  main  main.cpp
global_planning/: CMakeLists.txt
global_planning/config/: config.ini  global_variable.cpp  global_variable.h  read_config.cpp  read_config.h
global_planning/src/: N_fork_tree.cpp  README.md  base_lib_code.cpp  beifeng_transition_possibility_analysis.cpp  transition_possibility_analysis.cpp  wall_obstacle_data.cpp
global_planning/src/distance_compute/: distance_compute.cpp  distance_compute.h
global_planning/src/header/: base_lib_code.h  global_planning.h
